# Compiler-course

./: .gitmodules  Readme.md
graphics/: CMakeLists.txt  graphics.cpp  graphics.h  main.cpp
ir/: CMakeLists.txt  ir.cpp  ir.h  main.cpp
ir/demo/: CMakeLists.txt  graphics.cpp  graphics.h  mdbset_demo.cpp  mdbset_demo.h
language/: CMakeLists.txt  IRGenerator.cpp  IRGenerator.h  Makefile  Readme.md  main.cpp  parser.y  tokenizer.lex
language/codegen/: CMakeLists.txt  parser.y  tokenizer.lex
language/include/: AST.h  ASTNode.h  CompilerCore.h  Frame.h  IRGenerator.h  Kolang.h  Scope.h  libko.h
language/lib/: AST.cpp  ASTNode.cpp  CMakeLists.txt  CompilerCore.cpp  Frame.cpp  IRGenerator.cpp  Scope.cpp  libko.cpp  main.cpp
language/tests/: factorial.ko  floats.txt  mandelbrot.ko  mean.ko
